--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.ru.yandex.practicum=debug
 logging.level.org.zalando.logbook=TRACE
-#spring.datasource.url=jdbc:postgresql://localhost:5432/cats
-#spring.datasource.username=kitty
-#spring.datasource.password=purrrrr
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/cats
+spring.datasource.username=kitty
+spring.datasource.password=purrrrr
+spring.datasource.driver-class-name=org.postgresql.Driver
